--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@ font-family: 'Lato', sans-serif;
 
 body{
   min-width: 320px;
+  min-height: 100vh;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   margin: 0;
+  background: url('img/background_main.jpg');
+  background-position-x: center;
 }
 
 p{
@@ -34,9 +37,10 @@ a{
 }
 
 
-@media(max-width: 820px){
+@media(max-width: 1000px){
   .background_img{
-    background: white;
+    background: transparent;
+
   }
 }
 
@@ -46,15 +50,14 @@ a{
   width: 1170px;
   height: 100vh;
   margin: 0 auto;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.7);
 }
 
-@media(max-width: 820px){
+@media(max-width: 1000px){
   .layout{
-    background: white;
+    height: 100%;
   }
 }
-
 
 .film_container{
   display: flex;
@@ -163,6 +166,7 @@ a{
   height: 50px;
   margin: 5px 5px 0 0;
   padding: 10px;
+  border: 1px solid white;
   text-align: center;
   font-size: 25px;
   cursor: pointer;
@@ -302,6 +306,12 @@ box-shadow: inset 0 0 3px;
   font-size: 36px;
   animation-name: alert;
   animation-duration: 0.5s;
+}
+
+@media(max-width: 1160px){
+  .alert{
+    animation-name: none;
+  }
 }
 
 @media(max-width: 480px){
