--- a/style.css
+++ b/style.css
@@ -266,30 +266,10 @@ box-shadow: inset 0 0 3px;
   .button_prev,
   .button_next{
     position: relative;
-    width: 50px;
+    width: 100px;
     height: 50px;
-    border-radius: 50%;
-  }
-  .button_text{
-    display: none;
-  }
-  .button_prev::before{
-    content: '';
-    position: absolute;
-    background: url(img/button_prev.png);
-    width: 24px;
-    height: 24px;
-    top: 12px;
-    left: 12px;
-  }
-  .button_next::before{
-    content: '';
-    position: absolute;
-    background: url(img/button_next.png);
-    width: 24px;
-    height: 24px;
-    top: 12px;
-    left: 14px;
+    padding-top: 16px;
+    padding-bottom: 16px;;
   }
 }
 
